# CSC195-SC2

Classes/: CMakeLists.txt  Database.cpp  Database.h  Ide.cpp  Ide.h  Malware.cpp  Malware.h  Software.cpp  Software.h  main.cpp
CodeScrambler/: CMakeLists.txt  Caesar.cpp  Caesar.h  Cutter.cpp  Cutter.h  Reverser.cpp  Reverser.h  StringEncryptable.h  VowelReplacer.cpp  VowelReplacer.h  main.cpp
Container/: CMakeLists.txt  main.cpp
DataTypes/: CMakeLists.txt  main.cpp
Database/: Animal.cpp  Animal.h  Bird.cpp  Bird.h  CMakeLists.txt  Database.cpp  Database.h  main.cpp
Fail/: CMakeLists.txt  Circle.h  Rectangle.h  Shape.h  main.cpp
Fractions/: CMakeLists.txt  Fraction.h  main.cpp
HelloWorld/: CMakeLists.txt  main.cpp
MemoryReview/: CMakeLists.txt  main.cpp
OOP/: CMakeLists.txt  Food.cpp  Food.h  Meat.cpp  Meat.h  main.cpp
OperatorOverload/: CMakeLists.txt  Point.cpp  Point.h  main.cpp
Pointers/: main.cpp
PrimativeDataTypes/: CMakeLists.txt  main.cpp
RoselightCLI/: CMakeLists.txt  aiko.modelfile  main.cpp
RoselightCLI/Emotions/: Angry.cpp  Angry.h  Emotion.cpp  Emotion.h  Happy.cpp  Happy.h  Neutral.cpp  Neutral.h
RoselightDemo/: CMakeLists.txt  main  main.cpp
RoselightDemo/Emotions/: Emotion.h
Stream/: CMakeLists.txt  main.cpp
Template/: CMakeLists.txt  TempClass.cpp  TempClass.h  main.cpp
UserDataTypes/: CMakeLists.txt  Employee.cpp  Employee.h  main.cpp
UserDataTypesNotes/: CMakeLists.txt  Sandwich.cpp  Sandwich.h  main.cpp
containers/: CMakeLists.txt  main.cpp
